--- a/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
@@ -24,7 +24,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="panel-middle text-center" id="kingdom-formula">Fórmula</div>
+                <div class="panel-middle text-center" id="tax-formula">Fórmula</div>
                 <div class="panel-body text-responsive text-center text-only">
                     <p>ORO<sub>recaudado</sub> = GRANJAS<sub>jugador</sub> * ORO<sub>granja</sub> * 2</p>
                 </div>
