--- a/src/Archmage/GameBundle/Resources/views/Account/ranking.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/ranking.html.twig
@@ -15,7 +15,7 @@
                     <tr>
                         <th class="text-center"><i class="fa fa-fw fa-list-ol"></i><span class="hidden-xs">Posición</span></th>
                         <th class="text-center"><i class="fa fa-fw fa-rocket"></i><span class="hidden-xs">Poder</span></th>
-                        <th class="text-center"><i class="fa fa-fw fa-user"></i><span class="hidden-xs">Nick</span></th>
+                        <th class="text-center" id="tour-ranking"><i class="fa fa-fw fa-user"></i><span class="hidden-xs">Nick</span></th>
                         <th class="text-center"><i class="fa fa-fw fa-globe"></i><span class="hidden-xs">Tierras</span></th>
                     </tr>
                 </thead>
