--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -12,7 +12,7 @@
             </div>
         </div>
         <form id="attack" name="attack" class="form-inline" data-toggle="validator" action="{{ path('archmage_game_army_attack') }}" method="post" role="form">
-            <div class="col-xs-12 col-md-6 col-md-offset-3" id="army-attack">
+            <div class="col-xs-12 col-md-6 col-md-offset-3">
                 <div class="panel panel-default">
                     <div class="panel-heading text-center">Atacar</div>
                     <div class="panel-body text-responsive">
@@ -25,7 +25,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="panel-middle text-center" id="attack-options">Detalles</div>
+                    <div class="panel-middle text-center" id="tour-attack">Detalles</div>
                     <div class="panel-body text-center">
                         <div class="row">
                             <div class="col-xs-12">
@@ -65,7 +65,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="panel-middle text-center" id="attack-formula">Fórmula</div>
+                    <div class="panel-middle text-center">Fórmula</div>
                     <div class="panel-body text-responsive text-only text-center">
                         <p>PROB<sub>éxito</sub> = MIN (75, DEFENSA FÍSICA<sub>jugador</sub>)</p>
                     </div>
