--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -11,7 +11,7 @@
                 {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
             </div>
         </div>
-        <div class="col-xs-12 col-md-6" id="summary-economy">
+        <div class="col-xs-12 col-md-6" id="tour-economy">
             <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-bank"></i>Economía</div>
                 <div class="panel-body text-responsive">
@@ -34,7 +34,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-xs-12 col-md-6" id="summary-magic">
+        <div class="col-xs-12 col-md-6" id="tour-magic">
             <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-magic"></i>Magia</div>
                 <div class="panel-body text-responsive">
@@ -58,7 +58,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-xs-12 col-md-6" id="summary-territory">
+        <div class="col-xs-12 col-md-6" id="tour-territory">
             <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-globe"></i>Territorio</div>
                 <div class="panel-body text-responsive">
@@ -80,7 +80,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-xs-12 col-md-6" id="summary-temple">
+        <div class="col-xs-12 col-md-6" id="tour-temple">
             <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-balance-scale"></i>Templo</div>
                 <div class="panel-body text-responsive">
@@ -103,7 +103,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-xs-12 col-md-6" id="summary-army">
+        <div class="col-xs-12 col-md-6" id="tour-army">
             <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-flag-checkered"></i>Ejército</div>
                 <div class="panel-body text-responsive">
@@ -127,7 +127,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-xs-12 col-md-6" id="summary-tavern">
+        <div class="col-xs-12 col-md-6" id="tour-tavern">
             <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-beer"></i>Taberna</div>
                 <div class="panel-body text-responsive">
@@ -151,7 +151,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-xs-12 col-md-6" id="summary-defense">
+        <div class="col-xs-12 col-md-6" id="tour-defense">
             <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-shield"></i>Defensa</div>
                 <div class="panel-body text-responsive">
@@ -173,7 +173,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-xs-12 col-md-6" id="summary-social">
+        <div class="col-xs-12 col-md-6" id="tour-social">
             <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-user"></i>Social</div>
                 <div class="panel-body text-responsive">
@@ -194,7 +194,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-xs-12 hidden-xs hidden-sm" id="summary-balance">
+        <div class="col-xs-12 hidden-xs hidden-sm" id="tour-balance">
             <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-pie-chart"></i>Balance</div>
                 <div class="panel-body">
