--- a/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
@@ -11,7 +11,7 @@
                 {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
             </div>
         </div>
-        <div class="col-xs-12 col-md-6 col-md-offset-3" id="army-disband">
+        <div class="col-xs-12 col-md-6 col-md-offset-3" id="tour-disband">
             <div class="panel panel-default">
                 <div class="panel-heading text-center">Mantenimientos</div>
                 <div class="panel-body text-responsive">
@@ -30,7 +30,7 @@
             </div>
         </div>
         {% for troop in player.troops %}
-        <div class="col-xs-12 col-md-6" id="disband-troop">
+        <div class="col-xs-12 col-md-6">
             <div class="panel panel-{{ troop.unit.faction.class }}">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-group"></i><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a> <span data-toggle="tooltip" data-placement="top" title="Cantidad de tropas que posees">[{{ troop.quantity|nf }}]</span></div>
                 <div class="panel-body text-responsive">
