--- a/src/Archmage/GameBundle/Resources/views/Army/quest.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/quest.html.twig
@@ -11,7 +11,7 @@
                 {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
             </div>
         </div>
-        <div class="col-xs-12 col-md-6 col-md-offset-3" id="army-quest">
+        <div class="col-xs-12 col-md-6 col-md-offset-3" id="tour-quest">
             <div class="panel panel-default">
                 <div class="panel-heading text-center">Mapas</div>
                 <div class="panel-body text-responsive">
@@ -30,7 +30,7 @@
             </div>
         </div>
         {% for quest in player.quests %}
-        <div class="col-xs-12 col-md-6" id="quest-quest">
+        <div class="col-xs-12 col-md-6">
             <div class="panel panel-quest">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-map"></i><a href="{{ path('archmage_game_home_help') }}#aventuras" class="link">{{ quest.name }}</a></div>
                 <div class="panel-body text-responsive">
