--- a/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
@@ -11,7 +11,7 @@
                 {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
             </div>
         </div>
-        <div class="col-xs-12 col-md-6 col-md-offset-3" id="kingdom-market">
+        <div class="col-xs-12 col-md-6 col-md-offset-3" id="tour-market">
             <div class="panel panel-default">
                 <div class="panel-heading text-center">Runas</div>
                 <div class="panel-body text-responsive">
