--- a/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
@@ -11,7 +11,7 @@
                 {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
             </div>
         </div>
-        <div class="col-xs-12 col-md-offset-3 col-md-6" id="kingdom-tax">
+        <div class="col-xs-12 col-md-offset-3 col-md-6">
             <div class="panel panel-default">
                 <div class="panel-heading text-center">{{ (player.goldResourcePerTurn * 2)|nf }} Oro/Turno</div>
                 <div class="panel-body text-responsive">
@@ -24,7 +24,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="panel-middle text-center" id="tax-formula">Fórmula</div>
+                <div class="panel-middle text-center" id="tour-tax">Fórmula</div>
                 <div class="panel-body text-responsive text-center text-only">
                     <p>ORO<sub>recaudado</sub> = GRANJAS<sub>jugador</sub> * ORO<sub>granja</sub> * 2</p>
                 </div>
