--- a/src/Archmage/GameBundle/Resources/views/Kingdom/temple.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/temple.html.twig
@@ -11,7 +11,7 @@
                 {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
             </div>
         </div>
-        <div class="col-xs-12 col-md-offset-3 col-md-6" id="kingdom-temple">
+        <div class="col-xs-12 col-md-offset-3 col-md-6">
             <div class="panel panel-default">
                 <div class="panel-heading text-center">Rezar</div>
                 <div class="panel-body text-responsive">
@@ -24,7 +24,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="panel-middle text-center" id="temple-gods">Dioses</div>
+                <div class="panel-middle text-center" id="tour-temple">Dioses</div>
                 <div class="panel-body text-responsive">
                     {% for god in gods %}
                     <div class="col-xs-6 text-center">
