--- a/src/Archmage/GameBundle/Resources/views/Territory/build.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/build.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Construir{% endblock %}
 
 {% block body %}
+    a
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
@@ -12,7 +13,7 @@
             </div>
         </div>
         {% for construction in player.constructions %}
-        <div class="col-xs-12 col-md-6 {% if loop.first %}col-md-offset-3{% endif %}" id="build-{{ construction.building.name|slug }}">
+        <div class="col-xs-12 col-md-6 {% if loop.first %}col-md-offset-3{% endif %}" id="tour-{{ construction.building.name|slug }}">
             <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-home"></i><a href="{{ path('archmage_game_home_help') }}#{{ construction.building.name|slug }}" class="link">{{ construction.building.name }}</a> <span data-toggle="tooltip" data-placement="top" title="Edificios que posees actualmente">[{{ construction.quantity|nf }}]</span> {% if not loop.first %}<span data-toggle="tooltip" data-placement="top" title="Edificios construidos por turno">({{ ((player.construction('Talleres').quantity + 1) / construction.building.buildingratio)|round(0, 'ceil') }}/<i class="fa fa-fw fa-hourglass-half"></i>)</span>{% endif %}</div>
                 <div class="panel-body text-responsive">
