--- a/src/Archmage/GameBundle/Resources/views/navbar.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/navbar.html.twig
@@ -11,7 +11,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar-collapsable">
             <ul class="nav navbar-nav navbar-left">
-                <li><a href="#" class="navbar-link" style="outline:0;" onclick="tour.restart();" id="navbar-tour"><i class="fa fa-fw fa-lg fa-question-circle"></i>Tutorial</a></li>
+                <li><a class="navbar-link" id="tour-start"><i class="fa fa-fw fa-lg fa-question-circle"></i>Tutorial</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown" id="navbar-kingdom">
