--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -333,7 +333,7 @@
         </div>
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-quest"><a name="mapas"></a>
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-map"></i>Mapa de Aventura</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-map"></i>Mapa de Aventuras</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
