Reducidos algunos costes en turnos de templo, alquimia, aventura. Mejorado tutorial. Recolocado tutorial en navbar.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -116,156 +116,156 @@
                     {
                         path: "{{ path('archmage_game_kingdom_summary') }}",
                         orphan: true,
-                        title: "Bienvenido",
+                        title: "(1/26) Bienvenido!",
                         content: "Al principio este juego puede parecer un poco complicado, pero con mi tutorial aprenderás a jugar en menos de 5 minutos!"
                     }, {
                         path: "{{ path('archmage_game_kingdom_summary') }}",
                         element: "#tour-resources",
-                        title: "Recursos",
+                        title: "(2/26) Recursos",
                         content: "Estos son los recursos que dispondrás en el juego: turnos, magia, artefatos, tierras, runas, oro, personas y maná.",
                         placement: "bottom"
                     }, {
                         path: "{{ path('archmage_game_kingdom_summary') }}",
                         element: "#tour-turns",
-                        title: "Turnos",
+                        title: "(3/26) Turnos",
                         content: "Tal vez el recurso más importante. Comienzas con 300 turnos y se gana uno cada 3 minutos. Veamos qué hacer con ellos.",
                         placement: "bottom"
                     }, {
                         path: "{{ path('archmage_game_territory_build') }}",
                         element: "#tour-talleres",
-                        title: "Ahorrar turnos",
+                        title: "(4/26) Ahorrar turnos",
                         content: "Podemos emplearlos en construir algunos edificios. Comenzaremos por los talleres, que nos ahorrarán valiosos futuros turnos.",
-                        placement: "bottom"
+                        placement: "top"
                     }, {
                         path: "{{ path('archmage_game_territory_build') }}",
                         element: "#tour-granjas",
-                        title: "Ingresos",
+                        title: "(5/26) Ingresos",
                         content: "Unas cuantas granjas más nos ayudarán a ganar más oro al turno, lo cual siempre viene bien para mantener más tropas.",
-                        placement: "bottom"
+                        placement: "top"
                     }, {
                         path: "{{ path('archmage_game_territory_build') }}",
                         element: "#tour-pueblos",
-                        title: "Ingresos",
+                        title: "(6/26) Ingresos",
                         content: "También podríamos invertir en construir más pueblos, para aumentar la capacidad de personas de nuestro reino.",
-                        placement: "bottom"
+                        placement: "top"
                     }, {
                         path: "{{ path('archmage_game_territory_build') }}",
                         element: "#tour-nodos",
-                        title: "Ingresos",
+                        title: "(7/26) Ingresos",
                         content: "No podemos olvidarnos de los nodos, que nos ayudarán a tener más maná disponible para conjurar hechizos.",
-                        placement: "bottom"
+                        placement: "top"
                     }, {
                         path: "{{ path('archmage_game_territory_explore') }}",
                         element: "#tour-explore",
-                        title: "Tierras",
+                        title: "(8/26) Tierras",
                         content: "Pero, ¿qué pasa cuando se acaban las tierras? Puedes encontrar más explorando, hasta 3500. Pero luego tendrás que robarlas atacando.",
                         placement: "top"
                     }, {
                         path: "{{ path('archmage_game_magic_research') }}",
                         element: "#tour-research",
-                        title: "Nuevos hechizos",
+                        title: "(9/26) Nuevos hechizos",
                         content: "Antes de poder conjurar ningún hechizo, debes investigarlo primero invirtiendo muchos turnos.",
                         placement: "top"
                     }, {
                         path: "{{ path('archmage_game_territory_build') }}",
                         element: "#tour-gremios",
-                        title: "Ahorrar turnos",
+                        title: "(10/26) Ahorrar turnos",
                         content: "Recuerda que los gremios reducen la cantidad de turnos necesarios para investigar, ahorrando mucho tiempo en niveles altos.",
                         placement: "top"
                     }, {
                         path: "{{ path('archmage_game_magic_meditate') }}",
                         element: "#tour-meditate",
-                        title: "Cargar maná",
+                        title: "(11/26) Cargar maná",
                         content: "Si alguna vez necesitas maná, siempre puedes invertir turnos en meditar para llenar tus reservas rápidamente.",
                         placement: "top"
                     }, {
                         path: "{{ path('archmage_game_army_attack') }}",
                         element: "#tour-attack",
-                        title: "Atacar",
+                        title: "(12/26) Atacar",
                         content: "Atacar a otros jugadores es la mejor manera de obtener más oro y edificios. Puedes intentar usar hasta un hechizo y/o artefacto.",
                         placement: "top"
                     }, {
                         path: "{{ path('archmage_game_account_ranking') }}",
                         element: "#tour-ranking",
-                        title: "Objetivos",
+                        title: "(13/26) Objetivos",
                         content: "Investiga la tabla de posiciones para escoger al objetivo de tus ataques. También deberías espiarle antes de atacar.",
                         placement: "bottom"
                     }, {
                         path: "{{ path('archmage_game_kingdom_summary') }}",
                         element: "#tour-people",
-                        title: "Personas",
+                        title: "(14/26) Personas",
                         content: "Tal vez te hayas dado percatado de que las personas no se pueden producir rápidamente, salvo con ciertos artefactos.",
                         placement: "bottom"
                     }, {
                         path: "{{ path('archmage_game_army_disband') }}",
                         element: "#tour-disband",
-                        title: "Eliminar",
+                        title: "(15/26) Eliminar",
                         content: "Si no puedes mantener a todas tus tropas, tal vez te interese desbandar algunas para pagar menos mantenimientos por turno.",
                         placement: "top"
                     }, {
                         path: "{{ path('archmage_game_kingdom_summary') }}",
                         element: "#tour-defense",
-                        title: "Defensa",
+                        title: "(16/26) Defensa",
                         content: "Pero tambien pueden atacarte! Protégete con muchas y poderosas tropas, y no olvides aumentar las defensas de tu reino!",
                         placement: "top"
                     }, {
                         path: "{{ path('archmage_game_territory_build') }}",
                         element: "#tour-barreras",
-                        title: "Defensa Mágica",
+                        title: "(17/26) Defensa Mágica",
                         content: "La defensa mágica reduce las posibilidades de sufrir un hechizo, artefacto o encantamiento enemigo. Auméntala con barreras y encantamientos!",
                         placement: "top"
                     }, {
                         path: "{{ path('archmage_game_territory_build') }}",
                         element: "#tour-fortalezas",
-                        title: "Defensa Física",
+                        title: "(18/26) Defensa Física",
                         content: "La defensa física reduce las posibilidades de sufrir un ataque enemigo. Auméntala con fortalezas y encantamientos!",
                         placement: "top"
                     }, {
                         path: "{{ path('archmage_game_kingdom_temple') }}",
                         element: "#tour-temple",
-                        title: "Encantamientos",
+                        title: "(19/26) Encantamientos",
                         content: "Rezar a los dioses es una buena manera de recibir un encantamiento beneficioso sin pagar. Pero cuidado, puede ser perjudicial!",
                         placement: "top"
                     }, {
                         path: "{{ path('archmage_game_magic_dispell') }}",
                         element: "#tour-dispell",
-                        title: "Romper",
+                        title: "(20/26) Romper",
                         content: "Si un encantamiento te molesta, puedes intentar romperlo. Aunque cuanta mayor defensa mágica tenga el dueño, más te costará.",
                         placement: "top"
                     }, {
                         path: "{{ path('archmage_game_kingdom_auction') }}",
                         element: "#tour-auction",
-                        title: "Pujar",
+                        title: "(21/26) Pujar",
                         content: "Puedes adquirir artefactos, heroes, tropas, mapas, recetas o hechizos en la subasta si nadie te sobrepuja. Aunque necesitarás oro.",
                         placement: "top"
                     }, {
                         path: "{{ path('archmage_game_kingdom_tax') }}",
                         element: "#tour-tax",
-                        title: "Impuestos",
+                        title: "(22/26) Impuestos",
                         content: "Cobrar impuestos a tus súbditos es una manera rápida de obtener oro, aunque también puedes completar aventuras.",
                         placement: "top"
                     }, {
                         path: "{{ path('archmage_game_army_quest') }}",
                         element: "#tour-quest",
-                        title: "Misiones",
-                        content: "Derrotar poderosos ejércitos errantes es una buena forma de ganar oro y recompensas, como artefactos o runas.",
+                        title: "(23/26) Misiones",
+                        content: "Derrotar poderosos ejércitos errantes es una buena forma de ganar oro y recompensas como artefactos o runas.",
                         placement: "top"
                     }, {
                         path: "{{ path('archmage_game_kingdom_market') }}",
                         element: "#tour-market",
-                        title: "Runas",
+                        title: "(24/26) Runas",
                         content: "Las runas sirven para intercambiarse por los artefactos más poderosos en el mercado, y puedes comprar más dentro del juego.",
-                        placement: "bottom"
+                        placement: "top"
                     }, {
                         path: "{{ path('archmage_game_kingdom_summary') }}",
                         element: "#tour-balance",
-                        title: "Resumen",
-                        content: "Podrás ver en este gráfico todo lo que ocurre dentro de tus fronteras. Ya estás listo para jugar.",
+                        title: "(25/26) Resumen",
+                        content: "Podrás ver en este gráfico todo lo que ocurre dentro de tus fronteras. Ya estás listo para jugar!",
                         placement: "top"
                     }, {
                         path: "{{ path('archmage_game_home_help') }}",
                         element: "#tour-help",
-                        title: "Ayuda",
+                        title: "(26/26) Ayuda",
                         content: "Si tienes alguna duda, puedes consultar la ayuda del juego o volver a ver este tutorial. Que te diviertas!",
                         placement: "bottom"
                     }
