--- a/src/Archmage/GameBundle/Resources/views/Home/about.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/about.html.twig
@@ -36,6 +36,7 @@
                     <a class="btn btn-sm btn-primary" href="https://httpd.apache.org/">Apache2</a>
                     <a class="btn btn-sm btn-primary" href="https://mariadb.org/">MariaDB</a>
                     <a class="btn btn-sm btn-primary" href="http://php.net/">PHP5</a>
+                    <a class="btn btn-sm btn-primary" href="https://letsencrypt.org/">Let's Encrypt</a>
                     <p>Aunque el código fuente me pertenece, las imágenes no, ni saco ningún beneficio con ellas. No hay publicidad, y el único objetivo del juego es el de ser mi portfolio personal y complemento de mi currículum vitae. No obstante, si alguien desea que las elimine, no tiene más que comunicármelo. Normalmente las obtengo de:</p>
                     <p>Although all the source code belongs to me, images don't, nor I get profit from them. There are no adds, and the goal of this game is none but being my own personal portfolio and a complement of my curriculum vitae. However, if somebody wants any of them removed, just ask me to. I usually get them from:</p>
                     <br>
