--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -12,6 +12,21 @@
         </div>
         <div class="col-xs-12">
             <div class="panel panel-default">
+                <div class="panel-heading text-center">Versión 1.3b</div>
+                <div class="panel-body text-responsive">
+                    <ul>
+                        <li>Comienza la Temporada 4.</li>
+                        <li>Se ha implementado HTTPS usando certificados SSL.</li>
+                        <li>Ahora hay bots! No te devolverán los ataques, pero te lanzarán hechizos y artefactos.</li>
+                        <li>Ahora los <span class="label label-extra">Hechizos</span> comprados en subasta hay que investigarlos, por lo que los <span class="label label-extra">Gremios</span> seguirán siendo útiles constantemente. En compensación, se ha reducido el coste inicial en subasta.</li>
+                        <li>Se ha reducido el tamaño de muchas imágenes para agilizar la carga.</li>
+                    </ul>
+                </div>
+                <div class="panel-footer text-center">Beta cerrada</div>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="panel panel-default">
                 <div class="panel-heading text-center">Versión 1.2b</div>
                 <div class="panel-body text-responsive">
                     <ul>
@@ -95,7 +110,6 @@
                         <li>Se han ajustado muchos valores de bonus de <span class="label label-extra">Encantamientos</span>.</li>
                         <li>Se han ajustado muchos valores de bonus de <span class="label label-extra">Hechizos</span>.</li>
                         <li>Se ha añadido una segunda condición de victoria, la <span class="label label-extra">Ira de los Dioses</span> consulta la ayuda para entender cómo funciona.</li>
-                        <li>Ahora hay bots!</li>
                     </ul>
                 </div>
                 <div class="panel-footer text-center">Beta cerrada</div>
