--- a/src/Archmage/GameBundle/Resources/views/navbar.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/navbar.html.twig
@@ -10,9 +10,6 @@
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar-collapsable">
-            <ul class="nav navbar-nav navbar-left">
-                <li><a class="navbar-link" id="tour-start"><i class="fa fa-fw fa-lg fa-question-circle"></i>Tutorial</a></li>
-            </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown" id="navbar-kingdom">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-fort-awesome"></i>Reino<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
@@ -59,6 +56,7 @@
                         <li><a href="{{ path('archmage_game_account_legend') }}"><i class="fa fa-fw fa-lg fa-star"></i>Leyendas</a></li>
                         <li class="divider"></li>
                         <li><a href="{{ path('archmage_game_home_help') }}"><i class="fa fa-fw fa-lg fa-book"></i>Ayuda</a></li>
+                        <li><a href="#" data-toggle="collapse" data-target="#navbar-collapsable" id="tour-start"><i class="fa fa-fw fa-lg fa-question-circle"></i>Tutorial</a></li>
                         <li><a href="{{ path('archmage_game_home_patch') }}"><i class="fa fa-fw fa-lg fa-medkit"></i>Parches</a></li>
                         <li class="divider"></li>
                         <li><a href="{{ path('archmage_game_home_about') }}"><i class="fa fa-fw fa-lg fa-question-circle"></i>Acerca</a></li>
