Agregado validator en login y register. Arreglado bug css en register con selectpicker y form-control.

--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -344,8 +344,8 @@ html {-webkit-text-size-adjust: none !important;}
 .bootstrap-select.form-control {
     width: 60%;
 }
-.form-signin .bootstrap-select.form-control {
-    width: 100%;
+.form-signin .bootstrap-select {
+    width: 100% !important;
 }
 /* ARREGLAR BORDES BLANCOS EN BOOTSRAP SELECT */
 .bootstrap-select {
