--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -16,10 +16,11 @@
                 <div class="panel-body text-responsive">
                     <ul>
                         <li>Comienza la Temporada 4.</li>
-                        <li>Se ha implementado HTTPS usando certificados SSL.</li>
-                        <li>Ahora hay bots! No te devolverán los ataques, pero te lanzarán hechizos y artefactos.</li>
-                        <li>Ahora los <span class="label label-extra">Hechizos</span> comprados en subasta hay que investigarlos, por lo que los <span class="label label-extra">Gremios</span> seguirán siendo útiles constantemente. En compensación, se ha reducido el coste inicial en subasta.</li>
-                        <li>Se ha reducido el tamaño de muchas imágenes para agilizar la carga.</li>
+                        <li>Se ha adquirido un nuevo nombre de dominio.</li>
+                        <li>Se ha implementado HTTPS usando certificados SSL de LetsEncrypt.</li>
+                        <li>Ahora hay bots!</li>
+                        <li>Ahora los <span class="label label-extra">Hechizos</span> comprados se comportan como tus propios hechizos, hay que investigarlos tras comprarlos, por lo que los <span class="label label-extra">Gremios</span> seguirán siendo útiles constantemente. En compensación, se ha reducido el coste inicial en subasta.</li>
+                        <li>Se ha reducido el tamaño de muchas imágenes para agilizar la carga de la web en dispositivos móviles.</li>
                     </ul>
                 </div>
                 <div class="panel-footer text-center">Beta cerrada</div>
