--- a/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
@@ -11,7 +11,7 @@
                 {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
             </div>
         </div>
-        <div class="col-xs-12 col-md-6 col-md-offset-3" id="tour-market">
+        <div class="col-xs-12 col-md-6 col-md-offset-3">
             <div class="panel panel-default">
                 <div class="panel-heading text-center">Runas</div>
                 <div class="panel-body text-responsive">
@@ -30,7 +30,7 @@
             </div>
         </div>
         {% for artifact in artifacts if artifact.cost > 0 %}
-        <div class="col-xs-12 col-md-6">
+        <div class="col-xs-12 col-md-6" {% if loop.first %}id="tour-market"{% endfor %}>
             <div class="panel panel-artifact">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-diamond"></i><a href="{{ path('archmage_game_home_help') }}#{{ artifact.name|slug }}" class="link">{{ artifact.name }}</a></div>
                 <div class="panel-body text-responsive">
