--- a/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
@@ -24,7 +24,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="panel-middle text-center" id="formula" id="conjure-formula">Fórmula</div>
+                <div class="panel-middle text-center" id="conjure-formula">Fórmula</div>
                 <div class="panel-body text-responsive text-center text-only">
                     <p>PROB<sub>éxito</sub> = MIN (75, DEFENSA MÁGICA<sub>jugador</sub>)</p>
                 </div>
@@ -67,7 +67,7 @@
                                 {% if not research.spell.skill.self and not research.spell.skill.battle %}
                                 <select class="form-control selectpicker show-tick dropup" id="target" name="target" data-live-search="true" data-size="5" title="Objetivo">
                                     {% for target in targets if target != player %}
-                                        <option value="{{ target.id }}" data-content="<span class='label label-{{ target.faction.class }}'>{{ target.nick }}</span>">{{ target.nick }}</option>
+                                    <option value="{{ target.id }}" data-content="<span class='label label-{{ target.faction.class }}'>{{ target.nick }}</span>">{{ target.nick }}</option>
                                     {% endfor %}
                                 </select>
                                 {% endif %}
