--- a/src/Archmage/GameBundle/Resources/views/Home/about.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/about.html.twig
@@ -12,10 +12,10 @@
         </div>
         <div class="col-xs-12">
             <div class="panel panel-default">
-                <div class="panel-heading text-center">Archmage</div>
+                <div class="panel-heading text-center">W&yuml;z&auml;rd</div>
                 <div class="panel-body text-responsive text-only">
-                    <p>He desarrollado este juego completamente desde cero para demostrar mis habilidades como desarrollador web. Para ello, he empleado los siguientes frameworks y herramientas de desarrollo:</p>
-                    <p>I've completely developed on my own this game from scratch to show my coding skills as a web developer. Hence, I've used the following frameworks and developer tools:</p>
+                    <p>He desarrollado este juego completamente desde cero para demostrar mis habilidades como desarrollador web, basándome en un antigüo juego al que solía jugar cuando era muy joven: Archimago. Para ello, he empleado los siguientes frameworks y herramientas de desarrollo:</p>
+                    <p>I've completely developed on my own this game from scratch to show my coding skills as a web developer, based on an old game I used to play when I was younger: Archmage. Hence, I've used the following frameworks and developer tools:</p>
                     <br>
                     <a class="btn btn-sm btn-primary" href="http://symfony.com/">Symfony2</a>
                     <a class="btn btn-sm btn-primary" href="http://www.doctrine-project.org/">Doctrine2</a>
@@ -29,7 +29,7 @@
                     <a class="btn btn-sm btn-primary" href="https://www.jetbrains.com/phpstorm/">PHPStorm</a>
                     <a class="btn btn-sm btn-primary" href="http://fortawesome.github.io/Font-Awesome/">FontAwesome</a>
                     <a class="btn btn-sm btn-primary" href="http://datatables.net/">DataTables</a>
-                    <p>El ressultado que véis está colgado también en mi propio servidor de producción, una RaspberryPi2 montada usando:</p>
+                    <p>El resultado está colgado también en mi propio servidor de producción, una RaspberryPi2 montada usando:</p>
                     <p>The final result is also deployed in my own production server, a RaspberryPi2, using:</p>
                     <br>
                     <a class="btn btn-sm btn-primary" href="https://www.archlinux.org/">Arch Linux ARMv7</a>
@@ -44,7 +44,7 @@
                     <a class="btn btn-sm btn-primary" href="https://images.google.com/">Google Images</a>
                 </div>
                 <div class="panel-footer text-center">
-                    @fergardi
+                    <i class="fa fa-fw fa-lg fa-twitter"></i><a href="https://twitter.com/fergardi" class="link">@fergardi</a>
                 </div>
             </div>
         </div>
